--- a/django/templates/m2/index.html
+++ b/django/templates/m2/index.html
@@ -1,3 +1,12 @@
-<html><body>
-    <h1>Welcome to the M2 app</h1>
-</body></html>
+{% load django_vite %}
+<html>
+    <head>
+        {% vite_react_refresh %}
+        {% vite_hmr_client %}
+        {% vite_asset 'src/main.tsx' %}
+    </head>    
+    <body>
+        index template
+        <div id="root"></div>
+    </body>
+</html>
