--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -7,29 +7,19 @@
            unit((@grid_gutter-width / @base-font-size-px), em);
 }
 
-.error-message {
-    width: 80%;
-    max-width: 500px;
-    margin: auto;
+.error-container {
+    .error-message {
+        max-width: 500px;
+        margin: auto;
 
-    .m-btn-group .a-btn + .a-btn {
-        margin-left: 2rem;
+        .m-btn-group .a-btn + .a-btn {
+            margin-left: 2rem;
+            .respond-to-max(@bp-sm-min, {margin: 0.5rem 0;});
 
-        svg{
-            padding-left: .5rem;
-            padding-top: .1rem;
+            svg{
+                padding-left: .5rem;
+                padding-top: .1rem;
+            }
         }
-    }
-}
-
-@media screen and (max-width: 585px) {
-    .m-btn-group {
-        text-align: center;
-
-        .a-btn {margin: auto 2rem;}
-    }
-
-    .error-message .m-btn-group .a-btn + .a-btn {
-        margin: .5rem 0;
     }
 }
