Update loader message background.

--- a/front-end/src/components/Loader/Loader.less
+++ b/front-end/src/components/Loader/Loader.less
@@ -4,7 +4,7 @@
   flex-grow: 1;
 
   &__background {
-    background: rgba(16, 24, 32, 20%);
+    background: rgb(16 24 32 / 20%);
   }
 
   &_container {
@@ -15,6 +15,7 @@
   &_message {
     display: flex;
     align-items: center;
+    background-color: @gray-10;
     padding: unit((@grid_gutter-width / 2 / @base-font-size-px), em);
     margin-top: unit((@grid_gutter-width / 3 / @base-font-size-px), em);
   }
