--- a/front-end/src/components/LocatorBar/LocatorBar.less
+++ b/front-end/src/components/LocatorBar/LocatorBar.less
@@ -10,7 +10,10 @@
     padding-top: unit((@grid_gutter-width / 3 / @base-font-size-px), em);
   }
 
-  h2, h3, h4, h5 {
+  h2,
+  h3,
+  h4,
+  h5 {
     margin: 2px !important;
   }
 }
