--- a/django/templates/m2/index.html
+++ b/django/templates/m2/index.html
@@ -1,11 +1,3 @@
-{% load django_vite %}
-<html>
-    <head>
-        {% vite_react_refresh %}
-        {% vite_hmr_client %}
-        {% vite_asset 'src/main.tsx' %}
-    </head>    
-    <body>
-        <div id="root"></div>
-    </body>
-</html>
+<html><body>
+    <h1>Welcome to the M2 app</h1>
+</body></html>
