--- a/front-end/src/components/DefinitionList/DefinitionList.less
+++ b/front-end/src/components/DefinitionList/DefinitionList.less
@@ -3,13 +3,17 @@
 .definition-list__item {
   margin-top: unit((@grid_gutter-width / 3 / @base-font-size-px), em);
 
+  dt,
+  dd {
+    display: inline-block;
+    vertical-align: top;
+  }
+
   dt {
-    display: inline;
     font-weight: 600;
   }
 
   dd {
-    display: inline;
     margin-left: unit((@grid_gutter-width / 3 / @base-font-size-px), em);
   }
 }
