Remove unnecessary import and formatting updates.

--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -1,5 +1,5 @@
 @import (reference) './index.less';
-@import 'design-system-react/style.css';
+@import url('design-system-react/style.css');
 
 // set heights & layout so the loader can cover
 // a section of the page to bottom of viewport
@@ -17,7 +17,7 @@ body,
 // design system overrides needed for full-width layout
 .wrapper,
 .grid {
-	max-width: none !important;
+  max-width: none !important;
 }
 
 // global layout pattern
