--- a/front-end/src/components/DefinitionList/DefinitionList.less
+++ b/front-end/src/components/DefinitionList/DefinitionList.less
@@ -1,7 +1,7 @@
 @import (reference) '../../index.less';
 
 .definition-list__item {
-  margin-top: unit((@grid_gutter-width / 3 / @base-font-size-px), em);
+  margin-bottom: unit((@grid_gutter-width / 3 / @base-font-size-px), em);
 
   dt,
   dd {
@@ -10,10 +10,10 @@
   }
 
   dt {
-    font-weight: 600;
+    font-weight: 500;
   }
 
   dd {
-    margin-left: unit((@grid_gutter-width / 3 / @base-font-size-px), em);
+    margin-left: unit((@grid_gutter-width / 5 / @base-font-size-px), em);
   }
 }
