--- a/front-end/src/components/LocatorBar/Breadcrumbs.less
+++ b/front-end/src/components/LocatorBar/Breadcrumbs.less
@@ -26,6 +26,11 @@
     white-space: nowrap;
     text-overflow: ellipsis;
   }
+
+  a {
+    border-bottom-width: 1px;
+    border-style: dotted !important;
+  }
 }
 
 // Hide on print.
