--- a/front-end/src/components/DownloadCSV.less
+++ b/front-end/src/components/DownloadCSV.less
@@ -1,4 +1,4 @@
-@import '../../src/index.less';
+@import url('../../src/index.less');
 
 .MODAL_STYLES {
     position: fixed;
@@ -28,10 +28,7 @@
 
 .OVERLAY_STYLES {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, .7);
+    inset: 0;
+    background-color: rgb(0 0 0 / 70%);
     z-index: 1000;
   }
