--- a/front-end/src/components/DownloadModal.less
+++ b/front-end/src/components/DownloadModal.less
@@ -1,6 +1,6 @@
 @import url('../../src/index.less');
 
-.MODAL_STYLES {
+.modal {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -11,7 +11,7 @@
     max-width: 750px;
     min-width: 475px;
 
-    & .modal-p-padding {
+    & .modal__section {
         padding-bottom: 1rem;
     }
 
@@ -26,7 +26,7 @@
 }
 
 
-.OVERLAY_STYLES {
+.modal-overlay {
     position: fixed;
     inset: 0;
     background-color: rgb(0 0 0 / 70%);
