Add basic html format to long description text.

--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -98,3 +98,16 @@ header h2 a {
 .o-expandable-group .o-expandable__padded + .o-expandable__padded {
   margin-top: -1px;
 }
+
+// Styles for evaluator long description
+.long-description {
+  h4 {
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+
+  p {
+    margin-bottom: 25px;
+  }
+}
