More additions to admin page

--- a/django/templates/admin/parse_m2/event_parse_eval.html
+++ b/django/templates/admin/parse_m2/event_parse_eval.html
@@ -1,9 +1,9 @@
 {% extends 'admin/base_site.html' %}
-{% load i18n admin_urls static admin_modify %}
+{% load i18n admin_urls static admin_modify humanize %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
+<a href="{% url 'admin:index' %}">Home</a>
 &rsaquo; <a href="/admin/parse_m2/">Parse M2</a>
 &rsaquo; <a href="/admin/parse_m2/metro2event/">Metro2 Events</a>
 &rsaquo; <a href="/admin/parse_m2/metro2event/{{ object.id }}">{{ object.name }}</a>
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Data import info for event: {{ object.name }}</h1>
+    <h1>Data import summary for event: {{ object.name }}</h1>
     {% if object.m2datafile_set.first %}
         <h2>Data files imported</h2>
 
@@ -23,7 +23,7 @@
                 <td>Parsing status</td>
                 <td>Parsed lines</td>
                 <td>Unparseable lines</td>
-                <td>Timestamp</td>
+                <td>Imported date</td>
                 <td>Error message</td>
             </tr>
             </thead>
@@ -32,8 +32,8 @@
                 <tr>
                     <td>{{ file.file_name }}</td>
                     <td>{{ file.parsing_status }}</td>
-                    <td>{{ file.accountholder_set.count }}</td>
-                    <td>{{ file.unparseabledata_set.count }}</td>
+                    <td>{{ file.accountholder_set.count|intcomma }}</td>
+                    <td>{{ file.unparseabledata_set.count|intcomma }}</td>
                     <td>{{ file.timestamp }}</td>
                     <td>{{ file.error_message }}</td>
                 </tr>
@@ -41,37 +41,39 @@
             </tbody>
         </table>
 
-        <p style="font-size: 18px;text-align: end;padding-right: 60px;"> Total files imported: {{ object.m2datafile_set.count }} </p>
-        <p style="font-size: 18px;text-align: end;padding-right: 60px;"> Total tradelines imported: {{ object.total_tradelines }} </p>
+        <p><b>Total files imported:</b> {{ object.m2datafile_set.count|intcomma }} </p>
+        <p><b>Total tradelines imported:</b> {{ object.total_tradelines|intcomma }} </p>
 
     {% else %}
         <h3>No data files have been imported for this event</h3>
     {% endif %}
 
-    <h2>Evaluators</h2>
-    {% if object.evaluatorresultset_set.first %}
-        <p>Evaluators executed on: </p>
+    <h2 style="padding-top: 20px;">Evaluators</h2>
+    {% if object.evaluatorresultsummary_set.first %}
+        <table style="width: 100%; margin-bottom: 10px;">
+            <thead>
+            <tr>
+                <td>Evaluator</td>
+                <td>Hits</td>
+                <td>Inconsistency start</td>
+                <td>Inconsistency end</td>
+            </tr>
+            </thead>
+            <tbody>
+            {% for result in object.evaluatorresultsummary_set.all %}
+                <tr>
+                    <td>{{ result.evaluator.id }}</td>
+                    <td>{{ result.hits|intcomma }}</td>
+                    <td>{{ result.inconsistency_start }}</td>
+                    <td>{{ result.inconsistency_end }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+        <p><b>Evaluators executed on:</b> {{ object.evaluatorresultsummary_set.first.timestamp }}</p>
     {% else %}
         <h3>No evaluators have been run for this event</h3>
-    {% endif %}
-
-    <h2>Actions</h2>
-    {% if object.directory %}
-        <a href="/api/events/{{ object.id }}/parse/">Parse this event's data</a>
-        <p></p>Press "Parse" to parse the files in the `{{ object.directory }}` directory of the data folder.
-        {% if object.m2datafile_set.first %}
-            The existing parsed data for this event will be overwritten.
-        {% endif %}
-        </p>
-
-        <a href="/api/events/{{ object.id }}/evaluate/">Run evaluators on this event's data</a>
-        <p>Press "Evaluate" to run the evaluators over all data for this event.
-        {% if object.evaluatorresultsummary_set.first %}
-            The existing evaluator results for this event will be overwritten.
-        {% endif %}
-        </p>
-    {% else %}
-        <p>In order to begin the parsing process, fill in the "Directory" field for this event to indicate where the raw data files are located.</p>
     {% endif %}
 
 {% endblock %}
