Use LinkText component in warning modal and tweak its footer and icon spacing.

--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -85,3 +85,9 @@ header h2 a {
     margin-bottom: 25px;
   }
 }
+
+// Add spacing between link text and icons
+.a-link_text + .cf-icon-svg-wrapper,
+.a-btn__link .cf-icon-svg-wrapper {
+  padding-left: 0.2rem;
+}
