--- a/front-end/src/components/Modals/Modal.less
+++ b/front-end/src/components/Modals/Modal.less
@@ -17,13 +17,13 @@
     padding-bottom: 2rem;
   }
 
-  .modal-footer{
+  .modal-footer {
     background-color: @gray-5;
     border-top: 1px solid @gray;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    margin: 0 -2rem -2rem -2rem;
-    padding: 30px;
+    margin: 3rem -2rem -2rem;
+    padding: 2rem;
   }
 
   // Mobile only.
