--- a/front-end/src/pages/Guide/GuidePage.less
+++ b/front-end/src/pages/Guide/GuidePage.less
@@ -1,15 +1,9 @@
-.nav {
-    display: flex;
-    flex-flow: row;
+.navbar {
+    padding: 0;
+    font-size: inherit;
+}
 
-    .nav-item {
-        margin-right: 60px;
-
-        +:hover{
-            text-decoration: underline;
-        }
-
-    }
-
+.nav-item:hover {
+    text-decoration: underline;
 }
 
