--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -29,6 +29,12 @@ body,
   flex-direction: column;
 }
 
+// remove extra padding from nav header
+.m2-nav .navbar {
+  padding: 0;
+  font-size: inherit;
+}
+
 // Metro 2 header is a link but doesn't need link styling
 header h2 a {
   color: black !important;
