Track parser version in M2DataFile record

--- a/django/templates/admin/parse_m2/event_parse_eval.html
+++ b/django/templates/admin/parse_m2/event_parse_eval.html
@@ -25,6 +25,7 @@
                 <td>Unparseable lines</td>
                 <td>Imported date</td>
                 <td>Error message</td>
+                <td>Parser version</td>
             </tr>
             </thead>
             <tbody>
@@ -35,7 +36,7 @@
                     <td>{{ file.accountholder_set.count|intcomma }}</td>
                     <td>{{ file.unparseabledata_set.count|intcomma }}</td>
                     <td>{{ file.timestamp }}</td>
-                    <td>{{ file.error_message }}</td>
+                    <td>{{ file.parser_version }}</td>
                 </tr>
             {% endfor %}
             </tbody>
