results table language update

--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -70,6 +70,8 @@ header h2 a {
   align-items: end;
   margin-bottom: unit((@grid_gutter-width / 3 / @base-font-size-px), em);
 
+  h4.u-mb0 {color: @red;}
+
   .downloader {
     margin-left: auto;
   }
