update styling to keep in notification centered

--- a/django/templates/login_failed.html
+++ b/django/templates/login_failed.html
@@ -3,22 +3,26 @@
   <meta charset="UTF-8">
   <title>Metro2</title>
   <style>
-
     #message {
       position: absolute;
-      top: 40vh;
-      left: 20vw;
-      width: 575px;
-      height: 150px;
+      top: 50%;
+      left: 50%;
+      width: 38em;
+      height: 10em;
+      margin-top: -5em;
+      margin-left: -19em;
       border: 1px solid #feb66f;
       background-color: #fff6ed;
       font-family: Lato, proxima-nova, Helvetica Neue, Arial, sans-serif;
       text-align: left;
-      padding-left: 30px;
+      padding-left: 10px;
       display: flex;
       justify-content: center;
+      align-content: center;
       flex-direction: column;
-      align-items: flex-start;
+      display: flex; 
+      align-items: center; 
+
     }
   </style>
     <script type="module" crossorigin="" src="/static/assets/index-DsbbYCNb.js"></script>
@@ -26,9 +30,9 @@
 </head>
 <body>
 <div id="message">
-    <p><b>Your Metro2 account has been deactivated due to inactivity</b><br/><br/>
-        To have your account reactivated, please contact a site administrator for help.<br />
-        <a href="mailto:mailbox@example.com">Contact an administrator</a>
+  <p><b>Your Metro2 account has been deactivated due to inactivity</b><br /><br />
+    To have your account reactivated, please contact a site administrator for help.<br />
+    <a href="mailto:mailbox@example.com">Contact an administrator</a>
     </p>
 </div>
 </body>
