--- a/front-end/src/components/Modals/Modal.less
+++ b/front-end/src/components/Modals/Modal.less
@@ -1,17 +1,18 @@
 @import url('./src/index.less');
 
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-top: 5px solid @green;
+dialog.modal {
   border-radius: 5px;
-  background-color: #fff;
-  padding: 2rem;
-  z-index: 1000;
   max-width: 625px;
   min-width: 475px;
+  padding: 30px;
+  border: none;
+  border-top: 5px solid @green;
+  outline: none;
+  z-index: 1000;
+
+  &::backdrop {
+    background-color: rgb(0 0 0 / 60%);
+  }
 
   & .modal__section {
     padding-bottom: 2rem;
@@ -38,9 +39,6 @@
     });
 }
 
-.modal-overlay {
-  position: fixed;
-  inset: 0;
-  background-color: rgb(0 0 0 / 70%);
-  z-index: 1000;
+body:has(dialog[open]) {
+  overflow: hidden;
 }
