--- a/front-end/src/components/Table/Table.less
+++ b/front-end/src/components/Table/Table.less
@@ -10,6 +10,8 @@
   --ag-header-column-resize-handle-color: @table-border;
   --ag-secondary-border-color: @table-border;
   --ag-odd-row-background-color: @white;
+  // --ag-row-height: 2em;
+  --ag-header-height: 2.5em;
 
   .ag-root-wrapper {
     margin: unit((5px / @base-font-size-px), em) 0
@@ -21,10 +23,17 @@
   }
 
   .ag-cell-value {
-    line-height: 20px !important;
+    line-height: 1.5em !important;
     word-break: normal;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: unit((10px / @base-font-size-px), em);
+    padding-bottom: unit((10px / @base-font-size-px), em);
+  }
+
+  .ag-header-cell {
+    line-height: 1.25em !important;
+    word-break: normal;
+    padding-top: unit((10px / @base-font-size-px), em);
+    padding-bottom: unit((10px / @base-font-size-px), em);
   }
 
   .ag-header {
