--- a/front-end/src/pages/Guide/GuidePage.less
+++ b/front-end/src/pages/Guide/GuidePage.less
@@ -2,7 +2,7 @@
     border-top: 1px solid #b4b5b6 ;
 
     .content_wrapper {
-        margin-left: 0;
+        margin: 0 auto;
         padding: 0;
         height: 100%;
     }
