updates per Virginia

--- a/front-end/src/pages/Guide/GuidePage.less
+++ b/front-end/src/pages/Guide/GuidePage.less
@@ -18,8 +18,11 @@
         }
 
         .content-pad {
-            h5 {
-                margin-top: 1rem;
+            h3 {
+                margin-top: 2rem;
+            }
+            img + .h6 {
+                margin-top: 0;
             }
 
             img {
@@ -42,6 +45,11 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 1rem;
+    }
+
+    a[data-status="active"] {
+        color: #000;
+        font-weight: bold;
     }
 
 }
