Update list spacing and headings.

--- a/front-end/src/pages/Guide/GuidePage.less
+++ b/front-end/src/pages/Guide/GuidePage.less
@@ -1,3 +1,5 @@
+@import (reference) '../../index.less';
+
 #main {
     border-top: 1px solid #b4b5b6 ;
 
@@ -52,4 +54,9 @@
         font-weight: bold;
     }
 
+}
+
+caption {
+    .h3();
+    padding: 2rem 0;
 }
