--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -121,28 +121,20 @@ header h1 {
 .results__all {
   display: flex;
   width: 100%;
-  height: 100%;
-  background-color: @gray-10;
+  background-color: @gray-5;
+  max-height: 95vh;
 
   .results_sidebar {
-    width: 25%;
-    max-width: 500px;
-    max-height: 95vh;
+    flex: 1;
+    width: 33%;
+    max-width: 450px;
+    overflow-y: scroll;
+    margin: 2em 0 2em 2em;
+    padding-right: 2em;
 
-    legend {
-      display: block;
-      padding: unit((@grid_gutter-width / @base-font-size-px), em)
-        unit((@grid_gutter-width / @base-font-size-px), em) 0;
-    }
-
-    .filters-container {
-      max-height: calc(95vh - 6em);
-      overflow-y: scroll;
-
-      &_inner {
-        padding: 0 unit((@grid_gutter-width / @base-font-size-px), em)
-          unit((@grid_gutter-width / @base-font-size-px), em);
-      }
+    .h3 {
+      font-weight: 500;
+      font-size: 1.275em;
     }
   }
 
@@ -153,24 +145,6 @@ header h1 {
   }
 }
 
-.o-expandable-group__filters {
-  .o-expandable_header,
-  .o-expandable_content {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-  }
-}
-
 .loader {
   min-height: 90vh;
-}
-
-.filter-section {
-  max-height: 100vh;
-  height: 100%;
-
-  .wrapper {
-    height: 100%;
-    overflow-y: scroll;
-  }
 }
