Add boolean filter

--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -145,6 +145,15 @@ header h1 {
   }
 }
 
+.results-message {
+  display: flex;
+  gap: 1em;
+}
+
 .loader {
   min-height: 90vh;
+}
+
+.no-results-message h3 {
+  font-weight: 500;
 }
