Update filter sidebar design

--- a/front-end/src/components/Table/Table.less
+++ b/front-end/src/components/Table/Table.less
@@ -15,7 +15,7 @@
 
   .ag-root-wrapper {
     margin: unit((5px / @base-font-size-px), em) 0
-      unit((30px / @base-font-size-px), em);
+      unit((10px / @base-font-size-px), em);
   }
 
   .ag-cell {
@@ -89,9 +89,9 @@
   // fixed height container takes up 90% of viewport height
   // with a max of 900px (~20 rows)
   &--fixed-height {
-    height: 90vh;
+    height: 88vh;
+    // height: 95%;
     max-height: 1100px;
-    margin-bottom: 3vh;
   }
 }
 
