--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -118,19 +118,30 @@ header h1 {
   display: block;
 }
 
+.results-container {
+  // background-color: @gray-5;
+
+  .row__download {
+    margin: 0;
+    padding: 0.75em 1em 0.75em 1.5em;
+    background-color: @gray-5;
+  }
+  // max-height: 95vh;
+}
+
 .results__all {
   display: flex;
   width: 100%;
-  background-color: @gray-5;
-  max-height: 95vh;
+  // max-height: 92vh; // toggle off for full height sidebar
 
   .results_sidebar {
+    background-color: @gray-5;
     flex: 1;
     width: 33%;
     max-width: 450px;
-    overflow-y: scroll;
-    margin: 2em 0 2em 2em;
-    padding-right: 2em;
+    // overflow-y: scroll; // toggle off for full height sidebar
+    padding: 0.75em 1em 1em 1.5em;
+    // padding-right: 2em;
 
     .h3 {
       font-weight: 500;
@@ -139,9 +150,15 @@ header h1 {
   }
 
   .results_table {
-    flex: 1;
-    margin-top: -5px;
     background-color: @white;
+    flex: 1;
+    // display: flex;
+    // flex-direction: column;
+    height: 100%;
+
+    .results_pagination {
+      margin-top: 0.5em;
+    }
   }
 }
 
