Update filter removal button styles

--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -174,3 +174,9 @@ header h1 {
 .no-results-message h3 {
   font-weight: 500;
 }
+
+.a-btn__warning {
+  .cf-icon-svg-wrapper {
+    margin-right: 5px;
+  }
+}
