Add line length limits

--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -185,3 +185,11 @@ header h1 {
     margin-right: 5px;
   }
 }
+
+.evaluator-description {
+  max-width: 670px;
+}
+
+.evaluator-metadata {
+  max-width: 870px;
+}
